# CPPLABS

./: README.md  cpplabslist.txt  helloworld.txt
lab1/: CMakeFiles.txt  CMakeLists.txt  _CMakeLists.txt  cmake.bat  file.cpp  file.h  lab1.cbp  lab1.depend  lab1.layout  launch.json  main.cpp  main.h  test_main.cpp
lab1/googletest-master/: CMakeLists.txt
lab1/googletest-master/googletest/: CMakeLists.txt
lab1/src/: CMakeLists.txt
lab2/: CMakeLists.txt  lab1.depend  lab1.layout  main.cpp
lab2/libs/: CMakeLists.txt  file.cpp  file.h  sort.cpp  sort.h
lab2/test/: CMakeLists.txt  test_main.cpp
lab2_dll/: CMakeLists.txt  main.h
lab2_dll/googletest-master/googletest/: CMakeLists.txt
lab2_dll/libs/: CMakeLists.txt  sort.cpp  sort.h
lab2_dll/test/: CMakeLists.txt  test_main.cpp
lab4/: CMakeLists.txt
lab4/lib/: CMakeLists.txt  Encoder.cpp  Encoder.h
lab4/test/: CMakeLists.txt  test.cpp
lab_openmp/: CMakeLists.txt  openmp.cbp  openmp.cpp  openmp.depend  openmp.h  openmp.layout
lab_openmp/lib/: CMakeLists.txt  openmp.cpp  openmp.h
lab_openmp/test/: CMakeLists.txt  test.cpp
