cmake_minimum_required(VERSION 2.8.2) 
project(openmp CXX C)		
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(GCC_COVERAGE_COMPILE_FLAGS "-fopenmp -D_WIN32_WINNT=0x0501")
SET(GCC_COVERAGE_LINK_FLAGS    "-lgomp")
SET(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}")
SET(CMAKE_EXE_LINKER_FLAGS  "${CMAKE_EXE_LINKER_FLAGS} ${GCC_COVERAGE_LINK_FLAGS}")
add_subdirectory(googletest-master)
add_subdirectory(test)
add_library(libopenmp STATIC openmp.cpp openmp.h)